@@ -15,6 +15,8 @@ Unreleased
 - Fixed bug with attachments on mailin caused by a bogus assertion which would
   usually fail.
 
+- Bug fix: Make sure acl's are properly set on profiles during import.
+
 3.15 (2009-12-14)
 -----------------
 
